2003-06-13  Per Bothner  <per@bothner.com>

	* AttributeConstructor.java (apply):  Use CallContext's getNextArg
	method rather than getArgAsObject, which will be deprecated.
	* DocumentConstructor.java (apply):  Likewise.
	* ElementConstructor.java (apply):  Likewise.
	* TextConstructor.java (apply):  Likewise.

2003-05-21  Per Bothner  <per@bothner.com>

	* NamedAttributes.java (namedAttributes):  Use posToDataIndex.
	Fixes bug reported 05-18 by Seshukumar_Adiraju@infosys.com.

2003-05-04  Per Bothner  <per@bothner.com>

	* ListItems.java:  Handle non-Java2 case.
	* IteratorItems.java:  Handle non-Java2 case.

2003-05-03  Per Bothner  <per@bothner.com>

	* Focus.java.in:  Renemed to ..
	* Focus.java:   and changed to use new JAVA1/JAVA2 switching.
	* Makefile.am:  Update accordingly.

2003-05-02  Per Bothner  <per@bothner.com>

	* XMLParser.java (<init>):  New constructors automatically
	allocate a NamespaceResolver.
	* Document.java (parse):  Use new XMLParser constructor.
	Pass 'header' to SyntaxException constructor.

2003-04-30  Per Bothner  <per@bothner.com>

	* DefineNamespace.java (scanForDefinitions):  Set namespace
	Declaration's type to java.lang.String.

2003-04-14  Per Bothner  <per@bothner.com>

	* DefineNamespace.java (scanForDefinitions):  Use Translator's
	push method instead of pushBinding.

2003-03-04  Per Bothner  <per@bothner.com>

	* DocumentConstructor.java:  New class, extends CpsProcedure.
	* TextConstructor.java:  New class, extends CpsProcedure.
	* NodeName.java:  New class, extends Procedure1.
	* Makefile.am (java_sources):  Add new classes.

2003-03-02  Per Bothner  <per@bothner.com>

	* Document.java (makeUrl):  The 'url' argument can be a URL as well as
	a string, and now also takes a 'base' parameter.
	(parse, apply):  Use new new makeURL.
	(apply):  Implement specification in allowing a sequence of URLs,
	and an optional 'base' second parameter.

2003-02-13  Per Bothner  <per@bothner.com>
