@@ -1,3 +1,9 @@
+2003-06-27  Per Bothner  <per@bothner.com>
+
+	* NodeType.java (isObject(Object)):  New method.
+	* ElementType.java (isInstancePos):  If kind is OBJECT_VALUE, try
+	isInstance(Object).  Fixes bug 6/17 by reported vizawalou@wanadoo.fr.
+
 2003-06-13  Per Bothner  <per@bothner.com>
 
 	* AttributeConstructor.java (apply):  Use CallContext's getNextArg
